Fix: Resolve compilation errors in ProjectBuilder, DesignActivity, SrcCodeEditor, and CodeViewerActivity